ИCleared all spaces making code reading much better